角色模块添加

--- a/conf/mysql.conf
+++ b/conf/mysql.conf
@@ -1,5 +1,5 @@
-username = xiao9878
-pwd = xiao9878
+username = root
+pwd = root
 db = manager
-host = xiao9878.mysql.rds.aliyuncs.com
+host = localhost
 port = 3306
