--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,9 @@
 appname = manager
 httpport = 8080
-runmode = dev
+runmode = pro
 sessionon = true
 cookieName = manager
-
+[dev]
 include "mysql.conf"
+[pro]
+include "mysql-online.conf"
