--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,34 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "develop" ]
-  pull_request:
-    branches: [ "develop" ]
+    tags:
+      - '*'
 
 jobs:
-
-  build:
-
+  build-and-push:
     runs-on: centos-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Login to Docker Hub
+      run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+    - name: Set up Git
+      run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+
+    - name: Extract Tag
+      id: extract_tag
+      run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
+
+    - name: Build Docker Image
+      run: |
+        docker build -t your-dockerhub-username/your-repo-name:${{ steps.extract_tag.outputs.TAG }} .
+        docker tag your-dockerhub-username/your-repo-name:${{ steps.extract_tag.outputs.TAG }} your-dockerhub-username/your-repo-name:latest
+
+    - name: Push Docker Image
+      run: |
+        docker push your-dockerhub-username/your-repo-name:${{ steps.extract_tag.outputs.TAG }}
+        docker push your-dockerhub-username/your-repo-name:latest
