--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,12 @@ jobs:
 
     - name: Extract Tag
       id: extract_tag
-      run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
+      run: echo "::set-output name=TAG::${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') ? github.ref : github.event.inputs.tag }}"
 
     - name: Build Docker Image
       run: |
-        docker build -t your-dockerhub-username/your-repo-name:${{ steps.extract_tag.outputs.TAG }} .
-        docker tag your-dockerhub-username/your-repo-name:${{ steps.extract_tag.outputs.TAG }} your-dockerhub-username/your-repo-name:latest
+        docker build -t xiao9878/go-beego-manager:${{ steps.extract_tag.outputs.TAG }} .
+        docker tag xiao9878/go-beego-manager:${{ steps.extract_tag.outputs.TAG }} your-dockerhub-username/your-repo-name:latest
 
     - name: Push Docker Image
       run: |
