--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,17 +4,14 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Docker 镜像'
-        required: false
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Display Tag
+      run: echo "Tag pushed, ${{ github.ref_name }}"
     - name: Checkout Repository
       uses: actions/checkout@v2
 
