--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,16 +19,19 @@ jobs:
     - name: Set up Git
       run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
-    - name: Extract Tag
+    - name: Display Tag
+      run: echo "Tag pushed, ${{ github.ref }}"
+
+    - name: Extract Tag Name
+      run: echo "Tag name is $(basename ${{ github.ref }})"
       id: extract_tag
-      run: echo latest is ':' $(basename ${{ github.ref }})
 
     - name: Build Docker Image
       run: |
-        docker build -t xiao9878/go-beego-admin:${{ github.ref }} .
-        docker tag xiao9878/go-beego-admin:$(basename ${{ github.ref }})xiao9878/go-beego-admin:latest
+        docker build -t xiao9878/go-beego-admin:$(echo ${{ steps.extract_tag.outputs.TAG }})  .
+        docker tag xiao9878/go-beego-admin:$(echo ${{ steps.extract_tag.outputs.TAG }}) xiao9878/go-beego-admin:latest
 
     - name: Push Docker Image
       run: |
-        docker push xiao9878/go-beego-admin:$(basename ${{ github.ref }})
+        docker push xiao9878/go-beego-admin:$(echo ${{ steps.extract_tag.outputs.TAG }}) 
         docker push xiao9878/go-beego-admin:latest
