--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,10 +20,10 @@ jobs:
       run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Display Tag
-      run: echo "Tag pushed, ${{ github.ref }}"
+      run: echo "Tag pushed: ${{ github.ref }}"
 
     - name: Extract Tag Name
-      run: echo "Tag name is $(basename ${{ github.ref }})"
+      run: echo "Tag name: $(basename ${{ github.ref }})"
       id: extract_tag
 
     - name: Build Docker Image
